# nab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  demo.tape  microfetch_mcp.py  nab_mcp.py
.claude/agent-memory/rust-excellence-engineer/: MEMORY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
HomebrewFormula/: nab.rb
benches/: arena_benchmark.rs  content_bench.rs  router_bench.rs
docs/: VIDEO_AUDIO_MULTIMODAL_ANALYSIS_PLAN.md  architecture-pdf.md  cookie_subdomain_fix.md  ffmpeg_backend.md  review-pdf.md  spa_test_results.md
examples/: arena_usage.rs  stream_ffmpeg.rs
man/: nab.1
python/: README.md  pyproject.toml
python/src/nab_loader/: __init__.py  core.py  langchain.py  llamaindex.py
src/: api_discovery.rs  arena.rs  auth.rs  browser_detect.rs  fetch_bridge.rs  fingerprint.rs  form.rs  http3_client.rs  http_client.rs  js_engine.rs  lib.rs  login.rs  main.rs  mfa.rs  prefetch.rs  websocket.rs
src/analyze/: diarize.rs  extract.rs  fusion.rs  mod.rs  report.rs  transcribe.rs  vision.rs
src/annotate/: compositor.rs  mod.rs  overlay.rs  pipeline.rs  subtitle.rs
src/cmd/: analyze.rs  annotate.rs  auth.rs  bench.rs  cookies.rs  fetch.rs  fingerprint.rs  login.rs  mod.rs  otp.rs  output.rs  spa.rs  stream.rs  submit.rs  validate.rs
src/content/: html.rs  mod.rs  pdf.rs  plain.rs  table.rs  types.rs
src/fingerprint/: autoupdate.rs  mod.rs  tests.rs
src/plugin/: config.rs  mod.rs  runner.rs
src/site/: github.rs  hackernews.rs  instagram.rs  linkedin.rs  mastodon.rs  mod.rs  reddit.rs  stackoverflow.rs  twitter.rs  wikipedia.rs  youtube.rs
src/stream/: backend.rs  mod.rs  provider.rs
src/stream/backends/: ffmpeg.rs  mod.rs  native_hls.rs  streamlink.rs
src/stream/providers/: dr.rs  generic.rs  mod.rs  nrk.rs  svt.rs  yle.rs
tests/: arena_performance.rs  cli_auth.rs  cli_basic.rs  cli_fetch.rs  cookie_subdomain_test.sh
